Fixed details panel overflowing

--- a/src/componentStyles/objects/Dropdown.css
+++ b/src/componentStyles/objects/Dropdown.css
@@ -8,7 +8,7 @@
 .dropdown {
   width: 100%;
   padding: 10px;
-  margin: 10px 0;
+  /*margin: 10px 0;*/
   border-radius: 5px;
   text-align: left;
   cursor: pointer;
