--- a/src/componentStyles/objects/TextInput.css
+++ b/src/componentStyles/objects/TextInput.css
@@ -11,7 +11,7 @@
 .text-input-container input {
 	width: 100%;
 	padding: 10px;
-	margin: 10px 0;
+	/*margin: 10px 0;*/
 	border: 1px solid transparent;
 	border-radius: 5px;
 	text-align: center;
